Updating Jupyter Notebooks

--- a/NLTK/Natural_Language_Processing.ipynb
+++ b/NLTK/Natural_Language_Processing.ipynb
@@ -1,35 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Getting Started With Natural Language Processing in Python\n",
-    "### Presented by Eduonix!\n",
-    "\n",
-    "Natural-language processing (NLP) is an area of computer science and artificial intelligence concerned with the interactions between computers and human (natural) languages, in particular how to program computers to fruitfully process large amounts of natural language data (wikipedia). \n",
-    "\n",
-    "This rapidly improving area of artificial intelligence covers tasks such as speech recognition, natural-language understanding, and natural language generation.\n",
-    "\n",
-    "In the following projects, we're going to be building a strong NLP foundation by practicing:\n",
-    "\n",
-    "* Tokenizing - Splitting sentences and words from the body of text.\n",
-    "* Part of Speech tagging\n",
-    "* Chunking\n",
-    "\n",
-    "This foundation will open the door for machine learning in conjunction with NLP.  We will cover:\n",
-    "\n",
-    "* Machine learning in NLP\n",
-    "* How to tie in Scikit-learn (sklearn) with NLTK\n",
-    "* Training classifiers with a datasets (Next Project)\n",
-    "* Performing live, streaming, sentiment analysis with Twitter (Next Project)\n",
-    "\n",
-    "Let's dive right in! We are going to be using the Natural Language Toolkit (NLTK) which is a suite of libraries and programs for symbolic and statistical natural language processing for English written in the Python programming language\n",
-    "\n",
-    "To install it, simply type the following in your terminal:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -42,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, this doesn't install everything quite yet.  To select available packages and install different toolkits, use the following cells.  This code will open up a GUI which will allow you to run a full installation, or manually select the packages you want."
+    "This code will open up a GUI which will allow you to run a full installation, or manually select the packages you want."
    ]
   },
   {
@@ -71,20 +42,6 @@
    "source": [
     "import nltk\n",
     "nltk.download()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have the nltk package installed, lets go over some basic natural language processing vocabulary:\n",
-    "\n",
-    "##### Corpus - \n",
-    "Body of text, singular. Corpora is the plural of this. Example: A collection of medical journals.\n",
-    "##### Lexicon - \n",
-    "Words and their meanings. Example: English dictionary. Consider, however, that various fields will have different lexicons. \n",
-    "##### Token - \n",
-    "Each \"entity\" that is a part of whatever was split up based on rules. For examples, each word is a token when a sentence is \"tokenized\" into words. Each sentence can also be a token, if you tokenized the sentences out of a paragraph."
    ]
   },
   {
@@ -123,17 +80,6 @@
    ],
    "source": [
     "print(word_tokenize(text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Stop Words with NLTK:\n",
-    "\n",
-    "When using Natural Language Processing, our goal is to perform some analysis or processing so that a computer can respond to text appropriately. \n",
-    "\n",
-    "The process of converting data to something a computer can understand is referred to as \"pre-processing.\" One of the major forms of pre-processing is going to be filtering out useless data. In natural language processing, useless words (data), are referred to as stop words."
    ]
   },
   {
@@ -185,20 +131,6 @@
     "\n",
     "print(word_tokens)\n",
     "print(filtered_sentence)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Stemming Words with NLTK:\n",
-    "\n",
-    "Stemming, which attempts to normalize sentences, is another preprocessing step that we can perform.  In the english language, different variations of words and sentences often having the same meaning.  Stemming is a way to account for these variations; furthermore, it will help us shorten the sentences and shorten our lookup.  For example, consider the following sentence:\n",
-    "\n",
-    "* I was taking a ride on my horse.\n",
-    "* I was riding my horse.\n",
-    "\n",
-    "These sentences mean the same thing, as noted by the same tense (-ing) in each sentence; however, that isn't intuitively understood by the computer. To account for all the variations of words in the english language, we can use the Porter stemmer, which has been around since 1979."
    ]
   },
   {
@@ -265,15 +197,6 @@
     "\n",
     "for w in words:\n",
     "    print(ps.stem(w))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Part of Speech Tagging with NLTK\n",
-    "\n",
-    "Part of speech tagging means labeling words as nouns, verbs, adjectives, etc. Even better, NLTK can handle tenses! While we're at it, we are also going to import a new sentence tokenizer (PunktSentenceTokenizer). This tokenizer is capable of unsupervised learning, so it can be trained on any body of text. "
    ]
   },
   {
@@ -509,17 +432,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Chunking with NLTK\n",
-    "\n",
-    "Now that each word has been tagged with a part of speech, we can move onto chunking: grouping the words into meaningful clusters.  The main goal of chunking is to group words into \"noun phrases\", which is a noun with any associated verbs, adjectives, or adverbs. \n",
-    "\n",
-    "The part of speech tags that were generated in the previous step will be combined with regular expressions, such as the following:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -648,15 +560,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Chinking with NLTK\n",
-    "\n",
-    "Sometimes there are words in the chunks that we don't won't, we can remove them using a process called chinking."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -691,19 +594,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Named Entity Recognition with NLTK\n",
-    "\n",
-    "One of the most common forms of chunking in natural language processing is called \"Named Entity Recognition.\" NLTK is able to identify people, places, things, locations, monetary figures, and more.\n",
-    "\n",
-    "There are two major options with NLTK's named entity recognition: either recognize all named entities, or recognize named entities as their respective type, like people, places, locations, etc.\n",
-    "\n",
-    "Here, with the option of binary = True, this means either something is a named entity, or not. There will be no further detail."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -722,17 +612,6 @@
     "\n",
     "        \n",
     "process_content()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Text Classification\n",
-    "\n",
-    "##### Text classification using NLTK\n",
-    "\n",
-    "Now that we have covered the basics of preprocessing for Natural Language Processing, we can move on to text classification using simple machine learning classification algorithms."
    ]
   },
   {
@@ -942,17 +821,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results and Summary\n",
-    "\n",
-    "Not bad! But not too great either. That's okay, we'll learn how to further improve the results later.  In this project, we built a foundation for Natural Language Processing in Python. We covered tokenizing, stemming, part of speech tagging, chunking, named entity recognition, and text classification. \n",
-    "\n",
-    "In future projects we will look at combining mutliple classification algorithms to produce better results. Furthermore, we'll move on to more difficult challenges, such as sentiment analysis. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -962,7 +830,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -976,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
