--- a/PCA_Reduction/PCA.ipynb
+++ b/PCA_Reduction/PCA.ipynb
@@ -4,23 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Compression and Visualization using Principle Component Analysis (PCA) in Python\n",
-    "### Presented by Eduonix!\n",
-    "\n",
-    "This project would focus on mapping high dimensional data to a lower dimensional space, a necessary step for projects that utilize data compression or data visualizations. As the ethical discussions surrounding AI continue to grow, scientists and businesses alike are using visualizations of high dimensional data to explain results.\n",
-    "\n",
-    "During this project, we will perform K Means clustering on the well known Iris data set, which contains 3 classes of 50 instances each, where each class refers to a type of iris plant. To visualize the clusters, we will use principle component analysis (PCA) to reduce the number of features in the dataset.\n",
-    "\n",
-    "We will cover:\n",
-    "* The KMeans Clustering Elbow Method\n",
-    "* Principle Component Analysis with Scikit-Learn\n",
-    "* Meshgrid Visualizations for PCA-reduced Data\n",
-    "\n",
-    "Let's dive right in!\n",
-    "\n",
-    "### 1. Import Libraries\n",
-    "\n",
-    "First things first, let's ensure that we have all of the necessary libraries installed."
+    "# Data Compression and Visualization using Principle Component Analysis (PCA) in Python"
    ]
   },
   {
@@ -60,7 +44,7 @@
    "source": [
     "### 2. Importing and Preprocessing the Iris Dataset\n",
     "\n",
-    "Due to it's common usage for pattern recognition tasks, the iris dataset is available directly through scikit-learn.  Furthermore, we will construct a Pandas DataFrame that provides descriptive statistics for the data set, as well as interesting visualizations such as a scatter matrix. "
+    "Due to it's common usage for pattern recognition tasks, the iris dataset is available directly through scikit-learn. "
    ]
   },
   {
@@ -221,7 +205,7 @@
    "source": [
     "### 3. The Elbow Method\n",
     "\n",
-    "Since we already known that only three species of flowers are represented in this dataset, it's easy to predict the number of clusters we will need. However, what would we do if we didn't know this information? Since K-Means clustering is an unsupervised learning method, we often won't know the number of clusters necessary beforehand.  Fortunately, the elbow method is commonly used to determine the appropriate number of clusters for a dataset.  Let's use this method to confirm that three clusters is indeed the optimal value for this dataset. "
+    "The elbow method is commonly used to determine the appropriate number of clusters for a dataset.  Let's use this method to confirm that three clusters is indeed the optimal value for this dataset. "
    ]
   },
   {
@@ -286,9 +270,7 @@
    "source": [
     "### 4. Principle Component Analysis\n",
     "\n",
-    "From Wikipedia - principal component analysis (PCA) is a statistical procedure that uses an orthogonal transformation to convert a set of observations of possibly correlated variables into a set of values of linearly uncorrelated variables called principal components.\n",
-    "\n",
-    "Unless you have a heavy linear algebra background, it's easy to get lost in the eigenvectors and eigenvalues that PCA relies on.  Fortunately for us, scikit-learn makes implementing PCA easy and straight forward. In the cell below, we will perform a PCA reduction to reduce the number of features in our dataset to two. As a result of this reduction, we will be able to visualize each instance as an X,Y data point."
+    "we will perform a PCA reduction to reduce the number of features in our dataset to two. As a result of this reduction, we will be able to visualize each instance as an X,Y data point."
    ]
   },
   {
@@ -349,15 +331,6 @@
     "# re-fit kmeans model to principle components with appropriate number of clusters\n",
     "kmeans = KMeans(n_clusters = 3)\n",
     "kmeans.fit(pc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. Visualization of PCA-reduced Data\n",
-    "\n",
-    "Now that our data has been compressed, we can easily visualize it using matplotlib.pyplot. Furthermore, since our data has only two components, we can predict the appropriate cluster for each X, Y point in our plot and produce a color-coordinated meshgrid to display the different clusters in our K means algorithm."
    ]
   },
   {
@@ -430,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Clustering Metrics\n",
+    "### 5. Clustering Metrics\n",
     "\n",
     "It looks good! But did the PCA reduction impact the performance of our K means clustering algorithm? Let's investigate by using some common clustering metrics, such as homogeneity, completeness, and V-measure. \n",
     "\n",
@@ -527,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -541,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
